# uav-stitch

./: .gitignore  CMakeLists.txt  main.cpp
include/: SiftFeaturesFinder.hpp  Util.hpp
src/: SiftFeaturesFinder.cpp  Util.cpp  main.cpp
